minimum python version: 3.11

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,4 @@ build-backend = "setuptools.build_meta"
 name = "gf2bv"
 version = "0.1.0"
 description = "Solving linear systems over GF(2) by manipulating bitvectors"
+requires-python = ">=3.11"
